Slightly improve Link implementation. WiP.